--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 367}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="366377339"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -57,8 +56,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{37, 150}, {247, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -97,7 +94,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 59}, {320, 102}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="715970994"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -120,7 +116,6 @@
 												<int key="NSvFlags">292</int>
 												<string key="NSFrame">{{1, 1}, {65, 65}}</string>
 												<reference key="NSSuperview" ref="33855933"/>
-												<reference key="NSWindow"/>
 												<reference key="NSNextKeyView" ref="363668177"/>
 												<string key="NSReuseIdentifierKey">_NS:9</string>
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -133,7 +128,6 @@
 										</array>
 										<string key="NSFrame">{{2, 2}, {66, 66}}</string>
 										<reference key="NSSuperview" ref="715970994"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="913953477"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="988749328">
@@ -145,7 +139,6 @@
 								</array>
 								<string key="NSFrame">{{20, 70}, {70, 70}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="33855933"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -156,7 +149,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 82}, {202, 25}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="643461006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -193,7 +185,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 111}, {202, 22}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="89386331"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -225,7 +216,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{28, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="268319198"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -250,7 +240,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{62, 367}, {46, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="409957715"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -274,7 +263,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{177, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="992010058"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -299,7 +287,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{198, 367}, {72, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567928726"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -323,7 +310,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{103, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931826467"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -348,7 +334,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{129, 248}, {65, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1033075535"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -370,7 +355,6 @@
 						</array>
 						<string key="NSFrame">{{0, -59}, {320, 485}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1069856795"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="988749328"/>
@@ -379,7 +363,6 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="906725394"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -479,6 +462,14 @@
 						<reference key="destination" ref="715970994"/>
 					</object>
 					<int key="connectionID">57</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">teamButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1033075535"/>
+					</object>
+					<int key="connectionID">58</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -634,69 +625,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">57</int>
+			<int key="maxID">58</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MyVMViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="appNameLabel">UILabel</string>
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="commitsButton">UIButton</string>
-						<string key="emailLabel">UILabel</string>
-						<string key="loggedInView">UIView</string>
-						<string key="loginButton">UIButton</string>
-						<string key="profileImageView">UIImageView</string>
-						<string key="profilePictureBorderContainerView">UIView</string>
-						<string key="profilePictureContainerView">UIView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="appNameLabel">
-							<string key="name">appNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="commitsButton">
-							<string key="name">commitsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="emailLabel">
-							<string key="name">emailLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loggedInView">
-							<string key="name">loggedInView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loginButton">
-							<string key="name">loginButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profileImageView">
-							<string key="name">profileImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilePictureBorderContainerView">
-							<string key="name">profilePictureBorderContainerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilePictureContainerView">
-							<string key="name">profilePictureContainerView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MyVMViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
